<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Calculator">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calculator_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/calculator_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/process"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="bottom|end"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/process_number"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/result_number"
            app:layout_constraintEnd_toEndOf="@id/calculator_result"
            app:layout_constraintStart_toStartOf="@id/calculator_result"
            app:layout_constraintTop_toTopOf="@id/calculator_result" />

        <TextView
            android:id="@+id/result_number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="bottom|end"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="@id/calculator_result"
            app:layout_constraintEnd_toEndOf="@id/calculator_result"
            app:layout_constraintStart_toStartOf="@id/calculator_result"
            app:layout_constraintTop_toBottomOf="@id/process" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calculator_buttons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculator_result"
        app:layout_constraintVertical_weight="2">

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/one"
            android:textColor="@color/teal_200"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/four"
            app:layout_constraintEnd_toStartOf="@id/two"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/calculator_buttons"
            app:layout_constraintTop_toTopOf="@id/calculator_buttons"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/two"
            android:textColor="@color/teal_200"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/five"
            app:layout_constraintEnd_toStartOf="@id/three"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/one"
            app:layout_constraintTop_toTopOf="@id/calculator_buttons"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/three"
            android:textColor="@color/teal_200"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/six"
            app:layout_constraintEnd_toStartOf="@id/plus"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/two"
            app:layout_constraintTop_toTopOf="@id/calculator_buttons"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/four"
            android:textColor="@color/teal_200"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/seven"
            app:layout_constraintEnd_toStartOf="@id/five"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/calculator_buttons"
            app:layout_constraintTop_toBottomOf="@id/one"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/five"
            android:textColor="@color/teal_200"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/eight"
            app:layout_constraintEnd_toStartOf="@id/six"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/four"
            app:layout_constraintTop_toBottomOf="@id/two"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/six"
            android:textColor="@color/teal_200"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/nine"
            app:layout_constraintEnd_toStartOf="@id/minus"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/five"
            app:layout_constraintTop_toBottomOf="@id/three"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/seven"
            android:textColor="@color/teal_200"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/backspace"
            app:layout_constraintEnd_toStartOf="@id/eight"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/calculator_buttons"
            app:layout_constraintTop_toBottomOf="@id/four"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/eight"
            android:textColor="@color/teal_200"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/zero"
            app:layout_constraintEnd_toStartOf="@id/nine"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/seven"
            app:layout_constraintTop_toBottomOf="@id/five"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/nine"
            android:textColor="@color/teal_200"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/dot"
            app:layout_constraintEnd_toStartOf="@id/multiply"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/eight"
            app:layout_constraintTop_toBottomOf="@id/six"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="@color/teal_200"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/equal"
            app:layout_constraintEnd_toStartOf="@id/dot"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/backspace"
            app:layout_constraintTop_toBottomOf="@id/eight"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/plus"
            android:textColor="@color/skinYellow"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/minus"
            app:layout_constraintEnd_toEndOf="@id/calculator_buttons"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/three"
            app:layout_constraintTop_toTopOf="@id/calculator_buttons"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/minus"
            android:textColor="@color/skinYellow"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/multiply"
            app:layout_constraintEnd_toEndOf="@id/calculator_buttons"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/six"
            app:layout_constraintTop_toBottomOf="@id/plus"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/multiple"
            android:textColor="@color/skinYellow"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/divide"
            app:layout_constraintEnd_toEndOf="@id/calculator_buttons"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/nine"
            app:layout_constraintTop_toBottomOf="@id/minus"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/divide"
            android:textColor="@color/skinYellow"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/equal"
            app:layout_constraintEnd_toEndOf="@id/calculator_buttons"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/dot"
            app:layout_constraintTop_toBottomOf="@id/multiply"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/dot"
            android:textColor="@color/skinYellow"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/equal"
            app:layout_constraintEnd_toStartOf="@id/divide"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/zero"
            app:layout_constraintTop_toBottomOf="@id/nine"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/backspace"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/backspace"
            android:textColor="@color/darkPink"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/equal"
            app:layout_constraintEnd_toStartOf="@id/zero"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/calculator_buttons"
            app:layout_constraintTop_toBottomOf="@id/seven"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/equal"
            android:textColor="@color/purple_200"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="@id/calculator_buttons"
            app:layout_constraintEnd_toStartOf="@id/init"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="@id/calculator_buttons"
            app:layout_constraintTop_toBottomOf="@id/backspace"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/init"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:background="@drawable/key_button"
            android:gravity="center"
            android:text="@string/init"
            android:textColor="@color/darkPink"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/calculator_buttons"
            app:layout_constraintEnd_toEndOf="@id/calculator_buttons"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/equal"
            app:layout_constraintTop_toBottomOf="@id/divide"
            app:layout_constraintVertical_weight="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>